Make option to display Elioty LB/CB

--- a/hero_streamlit_test.ipynb
+++ b/hero_streamlit_test.ipynb
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2583ea0bba424eddbf72afc84cec60ad",
+       "model_id": "40629f9d805e4728bd00bc82721c8074",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be3d03b3bffe4bdd99a06bf2d09ef8f0",
+       "model_id": "541ad39156ce45c1b6f5344716bdefa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1397,16 +1397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['None']"
+       "['None', 'CB1', 'CB2']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,457 @@
     "    else:\n",
     "         return ['None']\n",
     "\n",
-    "return_costume_list(df, \"Vivica\")"
+    "return_costume_list(df3, \"Vivica C2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prefix(lb_choice=\"None\", costume_choice=\"None\"):\n",
+    "    prefix_1 = \"Max level\"\n",
+    "\n",
+    "    if lb_choice != 'None':\n",
+    "        prefix_1 = \"Limit Break\"\n",
+    "    \n",
+    "    prefix_2 = \"\"\n",
+    "    if costume_choice != \"None\":\n",
+    "        prefix_2 = f\" {costume_choice}\" # CB1 or CB2\n",
+    "\n",
+    "    prefix_3 = \":\"\n",
+    "    if lb_choice == 'LB1':\n",
+    "        prefix_3 = \" #1:\"\n",
+    "    elif lb_choice == 'LB2':\n",
+    "        prefix_3 = \" #2:\"\n",
+    "\n",
+    "    return prefix_1 + prefix_2 + prefix_3\n",
+    "\n",
+    "def return_hero_stat(df0, hero_name, lb_choice=\"None\", costume_choice=\"None\"):\n",
+    "    assert hero_name in df0.name.values\n",
+    "\n",
+    "    display_cols_0 = ['name', 'color', 'star', 'speed',]\n",
+    "    display_cols_1 = [] # ['power', 'attack', 'defense', 'health', ] --> to be select base one LB/Costume choice\n",
+    "    display_cols_2 = ['Aether Power', 'source', 'family']\n",
+    "\n",
+    "    prefix = get_prefix(lb_choice, costume_choice)\n",
+    "\n",
+    "    display_cols_1.append(f'{prefix} Power')\n",
+    "    display_cols_1.append(f'{prefix} Attack')\n",
+    "    display_cols_1.append(f'{prefix} Defense')\n",
+    "    display_cols_1.append(f'{prefix} Health')\n",
+    "    \n",
+    "    display_cols_all = display_cols_0 + display_cols_1 + display_cols_2\n",
+    "    df_ret = df0[df0.name == hero_name][display_cols_all]\n",
+    "\n",
+    "    df_ret = df_ret.rename(columns={f'{prefix} Power':'Power',\n",
+    "                    f'{prefix} Attack':'Attack',\n",
+    "                    f'{prefix} Defense':'Defense',\n",
+    "                    f'{prefix} Health':'Health'})\n",
+    "    return df_ret\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>849</th>\n",
+       "      <td>Vivica C2</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>755</td>\n",
+       "      <td>696</td>\n",
+       "      <td>702</td>\n",
+       "      <td>1359</td>\n",
+       "      <td>Heal Increase</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name   color star speed  Power  Attack  Defense  Health  \\\n",
+       "849  Vivica C2  yellow    5  Slow    755     696      702    1359   \n",
+       "\n",
+       "      Aether Power   source   family  \n",
+       "849  Heal Increase  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>849</th>\n",
+       "      <td>Vivica C2</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>902.0</td>\n",
+       "      <td>858.0</td>\n",
+       "      <td>866.0</td>\n",
+       "      <td>1676.0</td>\n",
+       "      <td>Heal Increase</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name   color star speed  Power  Attack  Defense  Health  \\\n",
+       "849  Vivica C2  yellow    5  Slow  902.0   858.0    866.0  1676.0   \n",
+       "\n",
+       "      Aether Power   source   family  \n",
+       "849  Heal Increase  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>849</th>\n",
+       "      <td>Vivica C2</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>916.0</td>\n",
+       "      <td>862.0</td>\n",
+       "      <td>870.0</td>\n",
+       "      <td>1758.0</td>\n",
+       "      <td>Heal Increase</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name   color star speed  Power  Attack  Defense  Health  \\\n",
+       "849  Vivica C2  yellow    5  Slow  916.0   862.0    870.0  1758.0   \n",
+       "\n",
+       "      Aether Power   source   family  \n",
+       "849  Heal Increase  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>847</th>\n",
+       "      <td>Vivica</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>755</td>\n",
+       "      <td>714</td>\n",
+       "      <td>694</td>\n",
+       "      <td>1328</td>\n",
+       "      <td>Defense Up</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
+       "847  Vivica  yellow    5  Slow    755     714      694    1328   Defense Up   \n",
+       "\n",
+       "      source   family  \n",
+       "847  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>847</th>\n",
+       "      <td>Vivica</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>902.0</td>\n",
+       "      <td>881.0</td>\n",
+       "      <td>855.0</td>\n",
+       "      <td>1638.0</td>\n",
+       "      <td>Defense Up</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
+       "847  Vivica  yellow    5  Slow  902.0   881.0    855.0  1638.0   Defense Up   \n",
+       "\n",
+       "      source   family  \n",
+       "847  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>847</th>\n",
+       "      <td>Vivica</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>915.0</td>\n",
+       "      <td>885.0</td>\n",
+       "      <td>860.0</td>\n",
+       "      <td>1717.0</td>\n",
+       "      <td>Defense Up</td>\n",
+       "      <td>Season1</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
+       "847  Vivica  yellow    5  Slow  915.0   885.0    860.0  1717.0   Defense Up   \n",
+       "\n",
+       "      source   family  \n",
+       "847  Season1  Classic  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hero_name = \"Vivica C2\"\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"None\", costume_choice=\"None\"))\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"LB2\", costume_choice=\"None\"))\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"LB1\", costume_choice=\"CB2\"))\n",
+    "\n",
+    "hero_name = \"Vivica\"\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"None\", costume_choice=\"None\"))\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"LB2\", costume_choice=\"None\"))\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"LB1\", costume_choice=\"CB2\"))"
    ]
   },
   {
@@ -1434,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +2001,7 @@
        "491  https://i.imgur.com/0JU9Ii1.jpg           0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2676,7 @@
        "'\\nTODO in github & streamlit Oct 23, 2023\\n- add date version, # heroes in total [at the beginning]\\n- modify C, C2 name\\n- add dream team feature\\n\\n- filter by stars\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
