add dot extraction

--- a/hero_streamlit_test.ipynb
+++ b/hero_streamlit_test.ipynb
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40629f9d805e4728bd00bc82721c8074",
+       "model_id": "a61b3a8caea642b0804efc933e7a2a22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "541ad39156ce45c1b6f5344716bdefa6",
+       "model_id": "0dbf4d2e6b5a4729aac6bb8392742d37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,6 +782,236 @@
    "source": [
     "print(f'there are total {len(df)} heroes, of which {count_dict['n_costume']} are costume1 and {count_dict['n_costume2']} are costume2')\n",
     "print(f'So number of unique non-costume heroes are {len(df) - count_dict['n_costume'] - count_dict['n_costume2']}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract DoT (Damage over Time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Deals 235% damage to the target and minor damage to nearby enemies', 'The target and nearby enemies receive 172 damage over 4 turns', \"The target and nearby enemies get -75% increase for any healing received for 2 turns. This effect can't be cleansed\", 'Dispels status ailments from the caster']\n",
+      "receive 172 damage over 4 turns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(172, 4, 43.0)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def extract_dot_from_list_of_strings(list_of_strings):\n",
+    "    '''\n",
+    "    TODO: deal with corosive poison\n",
+    "    'All enemies get corrosive poison for 4 turns. Corrosive Poison deals 50 damage and lowers the target’s mana generation by -9% each turn.'\n",
+    "    '''\n",
+    "\n",
+    "    wanted_substring = \"\"\n",
+    "    for s in list_of_strings:\n",
+    "        word_list = s.split()\n",
+    "        for i, w in enumerate(word_list):\n",
+    "            if \"damage\" == w.lower() and i+1 < len(word_list) and \"over\" == word_list[i+1].lower():\n",
+    "                wanted_substring = \" \".join(word_list[i-2:i+4])\n",
+    "                break\n",
+    "\n",
+    "    return wanted_substring\n",
+    "\n",
+    "import re\n",
+    "def extract_numbers_from_dot_string(dot_string):\n",
+    "    all_nums = [int(s) for s in re.findall(r'\\b\\d+\\b', dot_string)]\n",
+    "    total_damage = np.max(all_nums)\n",
+    "    if len(all_nums) >= 2:\n",
+    "        nturns = np.min(all_nums)\n",
+    "    else:\n",
+    "        nturns = 1\n",
+    "    damage_per_turn = total_damage/nturns\n",
+    "\n",
+    "    return total_damage, nturns, damage_per_turn\n",
+    "\n",
+    "print(df['effects'].values[402])\n",
+    "dot_string = extract_dot_from_list_of_strings(df['effects'].values[402]) # Suppose to be Jabbar\n",
+    "print(dot_string)\n",
+    "extract_numbers_from_dot_string(dot_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3eabd3ddd2d646a289fbd3dd634743b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dot_string_list = []\n",
+    "d_list = []\n",
+    "t_list = []\n",
+    "d_per_t_list = []\n",
+    "for i,s in tqdm(enumerate(df['effects'].values)):\n",
+    "    dot_string = extract_dot_from_list_of_strings(s) # empty if none\n",
+    "    dot_string_list.append(dot_string)\n",
+    "    if dot_string == \"\":\n",
+    "        d_list.append(0)\n",
+    "        t_list.append(0)\n",
+    "        d_per_t_list.append(0)\n",
+    "    else:\n",
+    "        d, t, d_per_t = extract_numbers_from_dot_string(dot_string)\n",
+    "        d_list.append(d)\n",
+    "        t_list.append(t)\n",
+    "        d_per_t_list.append(d_per_t)\n",
+    "\n",
+    "assert len(df) == len(d_per_t_list)\n",
+    "assert len(df) == len(dot_string_list)\n",
+    "\n",
+    "df['dot_string'] = dot_string_list\n",
+    "df['total_dot_damage'] = d_list\n",
+    "df['n_turns'] = t_list\n",
+    "df['dot_damage_per_turn'] = d_per_t_list\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dot_string</th>\n",
+       "      <th>total_dot_damage</th>\n",
+       "      <th>n_turns</th>\n",
+       "      <th>dot_damage_per_turn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>receive 172 damage over 4 turns</td>\n",
+       "      <td>172</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          dot_string  total_dot_damage  n_turns  \\\n",
+       "400                                                  0        0   \n",
+       "401                                                  0        0   \n",
+       "402  receive 172 damage over 4 turns               172        4   \n",
+       "403                                                  0        0   \n",
+       "404                                                  0        0   \n",
+       "\n",
+       "     dot_damage_per_turn  \n",
+       "400                  0.0  \n",
+       "401                  0.0  \n",
+       "402                 43.0  \n",
+       "403                  0.0  \n",
+       "404                  0.0  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['dot_string', 'total_dot_damage', 'n_turns', 'dot_damage_per_turn']].iloc[400:405]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(878, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "df.to_csv('heroes_ep.csv', index=False) # resave data with DoT"
    ]
   },
   {
@@ -1397,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1636,7 @@
        "['None', 'CB1', 'CB2']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1876,6 +2106,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>color</th>\n",
+       "      <th>star</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Aether Power</th>\n",
+       "      <th>source</th>\n",
+       "      <th>family</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>Proteus C</td>\n",
+       "      <td>purple</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>823.0</td>\n",
+       "      <td>975.0</td>\n",
+       "      <td>699.0</td>\n",
+       "      <td>1443.0</td>\n",
+       "      <td>Ailment Immunity</td>\n",
+       "      <td>Season2</td>\n",
+       "      <td>Atlantis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name   color star    speed  Power  Attack  Defense  Health  \\\n",
+       "402  Proteus C  purple    4  Average  823.0   975.0    699.0  1443.0   \n",
+       "\n",
+       "         Aether Power   source    family  \n",
+       "402  Ailment Immunity  Season2  Atlantis  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hero_name = \"Proteus C\"\n",
+    "display(return_hero_stat(df3, hero_name, lb_choice=\"LB2\", costume_choice=\"CB1\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1884,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +2306,7 @@
        "491  https://i.imgur.com/0JU9Ii1.jpg           0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,13 +2324,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['All enemies receive 324 Poison damage over 2 turns.', 'All enemies get -50% mana generation for 4 turns.']\n",
+      "324 Poison damage over 2 turns.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(324, 2, 162.0)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Display function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2663,33 +2999,6 @@
    ],
    "source": [
     "display_heroes_from_df(df2.sort_values(\"power\", ascending=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nTODO in github & streamlit Oct 23, 2023\\n- add date version, # heroes in total [at the beginning]\\n- modify C, C2 name\\n- add dream team feature\\n\\n- filter by stars\\n'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "TODO in github & streamlit Oct 23, 2023\n",
-    "- add date version, # heroes in total [at the beginning]\n",
-    "- modify C, C2 name\n",
-    "- add dream team feature\n",
-    "\n",
-    "- filter by stars\n",
-    "'''"
    ]
   }
  ],
